globus-xio-gridftp-driver (2.1-1+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes

 -- Globus Toolkit <support@globus.org>  Tue, 18 Feb 2014 12:18:17 -0500

globus-xio-gridftp-driver (2.0-1+gt6.@distro@) @distro@; urgency=low

  * Repackage for GT6 without GPT

 -- Globus Toolkit <support@globus.org>  Wed, 22 Jan 2014 16:23:36 -0500

globus-xio-gridftp-driver (1.3-1) unstable; urgency=low

  * GT-490: No Functional Group in globus-xio-gridftp-driver GPT metadata

 -- Globus Toolkit <support@globus.org>  Wed, 11 December 2013 14:27:14 -0500

globus-xio-gridftp-driver (1.2-1) unstable; urgency=low

  * add GLOBUS_LICENSE

 -- Globus Toolkit <support@globus.org>  Wed, 19 Jun 2013 07:03:29 -0400

globus-xio-gridftp-driver (1.1-1) unstable; urgency=low

  * GT-417: globus-xio-gridftp-driver package fails in doxygen

 -- Globus Toolkit <support@globus.org>  Tue, 18 Jun 2013 19:40:11 -0400

globus-xio-gridftp-driver (1.0-3) unstable; urgency=low

  * GT 5.2.2 final

 -- Globus Toolkit <support@globus.org>  Mon, 16 Jul 2012 15:25:43 -0400

globus-xio-gridftp-driver (1.0-2) unstable; urgency=low

  * Update version for 5.2.1

 -- Globus Toolkit <support@globus.org>  Tue, 14 Feb 2012 14:43:42 -0500

globus-xio-gridftp-driver (1.0-1) unstable; urgency=low

  * Update for 5.2.0 release

 -- Globus Toolkit <support@globus.org>  Mon, 05 Dec 2011 17:42:01 -0500

globus-xio-gridftp-driver (0.3-0GT5.1.1a) unstable; urgency=low

  * Non-Maintainer Upload -- Update to Globus Toolkit 5.1.1

 -- Globus Toolkit <support@globus.org>  Fri, 27 May 2011 11:18:31 -0400