@@ -1,3 +1,9 @@
+globus-xio-gridftp-driver (2.2-1+gt6.@distro@) @distro@; urgency=low
+
+  * Packaging fixes
+
+ -- Globus Toolkit <support@globus.org>  Wed, 19 Feb 2014 01:43:14 -0500
+
 globus-xio-gridftp-driver (2.1-1+gt6.@distro@) @distro@; urgency=low
 
   * Packaging fixes
